prevent: main scrollbar from showing

--- a/app/scss/main.scss
+++ b/app/scss/main.scss
@@ -29,7 +29,7 @@ p {
 
 #app-container {
     height: 100vh;
-    overflow: auto;
+    overflow: hidden;
 }
 
 .with-cover {
